apps/base/homepage/homepage.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
