apps/base/homepage/homepage.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: homepage
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${homepageIngressHost}"
  rules:
    - backendRefs:
        - name: homepage
          port: 3000
